src/test/ui/alloc-error/alloc-error-handler-bad-signature-2.stderr
error: return type should be `!`
  --> $DIR/alloc-error-handler-bad-signature-2.rs:12:3
   |
LL | ) {
   |   ^

error: argument should be `Layout`
  --> $DIR/alloc-error-handler-bad-signature-2.rs:11:11
   |
LL |     info: Layout,
   |           ^^^^^^

error: aborting due to 2 previous errors

